<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">

    <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input"
            app:layout_constraintVertical_bias="0.95"
            tools:layout_editor_absoluteX="1dp">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:textSize="24sp"
                    android:id="@+id/clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:layout_margin="5dp"
                    android:backgroundTint="#DD2C00"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
            />

            <Button
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    android:id="@+id/parentheses"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/parentheses"
                    android:textColor="#FFFFFF" android:onClick="BTN_par"/>

            <Button
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    android:id="@+id/power"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/circle"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/exponent"
                    android:textColor="#FFFFFF"
                    android:onClick="BTN_exp"/>

            <Button
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    android:id="@+id/divide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/divide"
                    android:textColor="#FFFFFF" android:onClick="BTN_divide"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/seven"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/seven"
                    android:textColor="#FFFFFF" android:onClick="BTN7"/>

            <Button
                    android:id="@+id/eigth"
                    android:background="@drawable/circle"
                    android:textSize="24sp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"

                    android:text="@string/eigth"
                    android:textColor="#FFFFFF" android:onClick="BTN8"/>

            <Button
                    android:id="@+id/nine"
                    android:background="@drawable/circle"
                    android:textSize="24sp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    android:layout_margin="5dp"

                    android:textColor="#FFFFFF" android:onClick="BTN9"/>

            <Button
                    android:id="@+id/multiply"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    android:textColor="#FFFFFF" android:onClick="BTN_multiply"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/four"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/four"
                    android:textColor="#FFFFFF" android:onClick="BTN4"/>

            <Button
                    android:id="@+id/five"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/five"
                    android:textColor="#FFFFFF" android:onClick="BTN5"/>

            <Button
                    android:id="@+id/six"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/six"
                    android:textColor="#FFFFFF" android:onClick="BTN6"/>

            <Button
                    android:id="@+id/minus"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/subtract"
                    android:textColor="#FFFFFF" android:onClick="BTN_subtract"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/one"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/one"
                    android:textColor="#FFFFFF" android:onClick="BTN1"/>

            <Button
                    android:id="@+id/two"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/two"
                    android:textColor="#FFFFFF" android:onClick="BTN2"/>

            <Button
                    android:id="@+id/three"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/three"
                    android:textColor="#FFFFFF" android:onClick="BTN3"/>

            <Button
                    android:id="@+id/add"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textColor="#FFFFFF" android:onClick="BTN_add"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/plus_minus"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/plusMinus"
                    android:textColor="#FFFFFF" android:onClick="BTN_plusMinus"/>

            <Button
                    android:id="@+id/zero"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:textColor="#FFFFFF" android:onClick="BTN0"/>

            <Button
                    android:id="@+id/point"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"

                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/point"
                    android:textColor="#FFFFFF" android:onClick="BTN_point"/>

            <Button
                    android:id="@+id/equal"
                    android:background="@drawable/circle"
                    android:textSize="24sp"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/equals"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#43A047"
                    android:onClick="BTN_equal"/>
        </TableRow>
    </TableLayout>

    <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Enter in a value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="false"
            android:inputType="none"
            android:textSize="36sp"
            android:textAlignment="textEnd"
            tools:ignore="LabelFor" />


    <ImageButton
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:background="@drawable/circle"
            android:contentDescription="@string/backspace"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/backspace"
            tools:ignore="SpeakableTextPresentCheck" android:onClick="BTN_clear"/>

</androidx.constraintlayout.widget.ConstraintLayout>